--- a/TheBestMovieTheater/App.config
+++ b/TheBestMovieTheater/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="TheBestMovieTheater.Properties.Settings.TBMT_DBConnectionString"
+            connectionString="Data Source=CRCL-CST-027;Initial Catalog=TBMT_DB;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
