--- a/TheBestMovieTheater/App.config
+++ b/TheBestMovieTheater/App.config
@@ -7,7 +7,7 @@
             connectionString="Data Source=CRCL-CST-027;Initial Catalog=TBMT_DB;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="TheBestMovieTheater.Properties.Settings.TBMT_DBConnectionStringLocal"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\TBMT_DB.mdf;Integrated Security=True;Connect Timeout=30"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\TBMT\TBMT_DB.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
