--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -75,10 +75,15 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
-    <Compile Include="TBMT_DBDataSet1.Designer.cs">
+    <Compile Include="TBMT_DBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>TBMT_DBDataSet1.xsd</DependentUpon>
+      <DependentUpon>TBMT_DBDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="TBMT_DBDataSetLocal.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
@@ -111,16 +116,27 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="TBMT_DBDataSet1.xsc">
-      <DependentUpon>TBMT_DBDataSet1.xsd</DependentUpon>
+    <None Include="TBMT_DBDataSet.xsc">
+      <DependentUpon>TBMT_DBDataSet.xsd</DependentUpon>
     </None>
-    <None Include="TBMT_DBDataSet1.xsd">
+    <None Include="TBMT_DBDataSet.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>TBMT_DBDataSet1.Designer.cs</LastGenOutput>
+      <LastGenOutput>TBMT_DBDataSet.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
     </None>
-    <None Include="TBMT_DBDataSet1.xss">
-      <DependentUpon>TBMT_DBDataSet1.xsd</DependentUpon>
+    <None Include="TBMT_DBDataSet.xss">
+      <DependentUpon>TBMT_DBDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="TBMT_DBDataSetLocal.xsc">
+      <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
+    </None>
+    <None Include="TBMT_DBDataSetLocal.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>TBMT_DBDataSetLocal.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="TBMT_DBDataSetLocal.xss">
+      <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
     </None>
   </ItemGroup>
   <ItemGroup>
