--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -75,6 +75,12 @@
     <Compile Include="Register.Designer.cs">
       <DependentUpon>Register.cs</DependentUpon>
     </Compile>
+    <Compile Include="ShowtimeModifyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ShowtimeModifyForm.Designer.cs">
+      <DependentUpon>ShowtimeModifyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="TBMT_DBDataSet.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -105,6 +111,9 @@
     </Compile>
     <EmbeddedResource Include="Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ShowtimeModifyForm.resx">
+      <DependentUpon>ShowtimeModifyForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
