Implementing ListViewHelper methods

--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Client.cs" />
+    <Compile Include="ListViewHelper.cs" />
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
