--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -47,17 +47,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AvailableMovies.cs">
+    <Compile Include="AvailableMoviesForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AvailableMovies.Designer.cs">
-      <DependentUpon>AvailableMovies.cs</DependentUpon>
-    </Compile>
-    <Compile Include="availableMoviesForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="availableMoviesForm.Designer.cs">
-      <DependentUpon>availableMoviesForm.cs</DependentUpon>
+    <Compile Include="AvailableMoviesForm.Designer.cs">
+      <DependentUpon>AvailableMoviesForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Client.cs" />
     <Compile Include="ClientMenuForm.cs">
@@ -112,11 +106,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="AvailableMovies.resx">
-      <DependentUpon>AvailableMovies.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="availableMoviesForm.resx">
-      <DependentUpon>availableMoviesForm.cs</DependentUpon>
+    <EmbeddedResource Include="AvailableMoviesForm.resx">
+      <DependentUpon>AvailableMoviesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ClientMenuForm.resx">
       <DependentUpon>ClientMenuForm.cs</DependentUpon>
