Added UserInputValidation static class.
Implemented NumericValidationCheck for whole number validation.

--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -106,6 +106,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
     </Compile>
+    <Compile Include="UserInputValidation.cs" />
     <EmbeddedResource Include="AvailableMoviesForm.resx">
       <DependentUpon>AvailableMoviesForm.cs</DependentUpon>
     </EmbeddedResource>
