--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -106,6 +106,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
     </Compile>
+    <Compile Include="UpcomingMoviesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UpcomingMoviesForm.Designer.cs">
+      <DependentUpon>UpcomingMoviesForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AvailableMoviesForm.resx">
       <DependentUpon>AvailableMoviesForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ShowtimeModifyForm.resx">
       <DependentUpon>ShowtimeModifyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UpcomingMoviesForm.resx">
+      <DependentUpon>UpcomingMoviesForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
