--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -68,6 +68,7 @@
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
     <Compile Include="Manager.cs" />
+    <Compile Include="ModifyFormHelper.cs" />
     <Compile Include="MovieModifyForm.cs">
       <SubType>Form</SubType>
     </Compile>
