--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -69,6 +69,12 @@
     </Compile>
     <Compile Include="Manager.cs" />
     <Compile Include="ModifyFormHelper.cs" />
+    <Compile Include="MovieScreeningsModifyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MovieScreeningsModifyForm.Designer.cs">
+      <DependentUpon>MovieScreeningsModifyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MovieModifyForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +128,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MovieModifyForm.resx">
       <DependentUpon>MovieModifyForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MovieScreeningsModifyForm.resx">
+      <DependentUpon>MovieScreeningsModifyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
