Added Overlapping validation for movie screenings.
Validation contains some logic errors.
Program executable.

--- a/TheBestMovieTheater/TheBestMovieTheater.csproj
+++ b/TheBestMovieTheater/TheBestMovieTheater.csproj
@@ -165,8 +165,8 @@
     </None>
     <None Include="TBMT_DBDataSetLocal.xsd">
       <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>TBMT_DBDataSetLocal.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>TBMT_DBDataSetLocal1.Designer.cs</LastGenOutput>
     </None>
     <None Include="TBMT_DBDataSetLocal.xss">
       <DependentUpon>TBMT_DBDataSetLocal.xsd</DependentUpon>
